[package]
name = "triton-vm-mini"
version = "0.1.0"
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
num-traits = { workspace = true }
triton-opcodes = { workspace = true }
twenty-first = { workspace = true }
